--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "grunt-cli": "~0.1.11",
     "grunt": "~0.4.2",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-jsdoc": "~0.4.2"
+    "grunt-jsdoc": "~0.4.2",
+    "grunt-contrib-qunit": "~0.3.0",
+    "grunt-lib-phantomjs": "~0.4.0",
+    "grunt-contrib-connect": "~0.6.0"
   }
 }
