--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-jsdoc": "~0.4.2",
     "grunt-contrib-qunit": "~0.3.0",
     "grunt-lib-phantomjs": "~0.4.0",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-concat": "~0.3.0"
   }
 }
