--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-qunit": "~0.3.0",
     "grunt-lib-phantomjs": "~0.4.0",
     "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-jsbeautifier": "~0.2.6"
   }
 }
